--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.13",
+    "@popperjs/core": "^2.11.8",
     "@react-google-maps/api": "^2.18.1",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@types/node": "18.15.3",
@@ -20,6 +21,7 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-popper": "^2.3.0",
     "react-responsive-carousel": "^3.2.23",
     "typescript": "5.0.2"
   },
