--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "i18next": "^22.5.0",
     "next": "13.2.4",
+    "next-i18next": "^13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.3.1",
     "react-popper": "^2.3.0",
     "react-responsive-carousel": "^3.2.23",
     "typescript": "5.0.2"
