--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "exif-parser": "^0.1.12",
     "i18next": "^22.5.0",
     "next": "13.2.4",
     "next-i18next": "^13.3.0",
