--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-i18next": "^12.3.1",
     "react-popper": "^2.3.0",
     "react-responsive-carousel": "^3.2.23",
-    "typescript": "5.0.2"
+    "typescript": "5.0.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
