--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "react-i18next": "^12.3.1",
     "react-popper": "^2.3.0",
     "react-responsive-carousel": "^3.2.23",
+    "shortid": "^2.2.16",
     "typescript": "5.0.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
     "@types/google.maps": "^3.53.0",
+    "@types/shortid": "^0.0.29",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
